# Fractals

./: .gitignore  CMakeLists.txt  README.md
src/: FractalsConfig.h.in  colorPalette.cpp  colorPalette.h  combobox_fractals.cpp  combobox_fractals.h  combobox_palettes.cpp  combobox_palettes.h  constants.h  fractal.cpp  fractal.h  fractals.cpp  generators.cpp  generators.h  main.cpp  mainwindow.cpp  mainwindow.h  mydialog.ui  myglwidget.cpp  myglwidget.h  myglwidget.ui  oglwidget.cpp  oglwidget.h  palettes.h  tmp.h
src/GUI/: combobox_fractals.cpp  combobox_palettes.cpp  combobox_palettes.h  label_pos.cpp  label_pos.h  label_size.cpp  label_size.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/Logic/: colorPalette.cpp  colorPalette.h  constants.h  displayer.cpp  displayer.h  fractal.cpp  fractal.h  fractals.cpp  fractals.h  fractalsSupplier.h  generators.cpp  generators.h  palettes.h
src/OpenGL/: oglwidget.cpp  oglwidget.h
